layout issue

--- a/style.css
+++ b/style.css
@@ -21,12 +21,14 @@
         }
 
         body {
-            font-family: 'JetBrains Mono', 'monospace';
             background-color: var(--bg-primary);
+            font-family: monospace;
             color: var(--text-primary);
             line-height: 1.6;
             overflow-x: hidden;
         }
+
+
 
         /* 3. Terminal Window Container */
         .terminal-container {
@@ -95,12 +97,14 @@
         /* 7. Who Am I*/
         .ascii-name {
             color: var(--accent-purple);
-            font-size: clamp(8px, 1.5vw, 32px);
+            font-family: 'Courier Prime';
+            font-size: 1em; /* or whatever fixed size works best */
             line-height: 1;
-            margin-bottom: 30px;
             white-space: pre;
             text-align: left;
+            margin-bottom: 2em;
         }
+
 
         .intro-text {
             color: var(--text-primary);
@@ -137,8 +141,9 @@
 
         .arsenal-logo {
             white-space: pre;
-            width: 30em;
-            font-size: clamp(4px, 1.5vw, 8px);
+            width: 40em;
+            font-size: clamp(6px, 1.5vw, 10px);
+            font-family: 'Courier New';
             line-height: 1;
             color: var(--accent-orange);
             margin: 8px;
@@ -154,7 +159,7 @@
             color: var(--accent-cyan);
             font-size: 18px;
             font-weight: bold;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
         }
 
         .arsenal-description {
@@ -221,9 +226,8 @@
 
 	    .project-visit {
     	    display: flex;
-    	    font-family: monospace;
     	    font-size: 16px;
-    	    max-width: 64px;
+    	    max-width: 8em;
             color: var(--text-primary);
             text-decoration: none;
             padding: 6px 12px;
@@ -257,7 +261,6 @@
 
         /* 10. Contact */
         .contact-container {
-            font-family: monospace;
 	        background-color: var(--bg-primary);
             padding: 30px;
             border-radius: 6px;
@@ -265,7 +268,7 @@
         }
 
 	    .contact-text {
-	    color: var(--text-primary);
+	        color: var(--text-primary);
             font-size: 16px;
             max-width: 800px;
             margin: 0 auto;
@@ -312,6 +315,10 @@
                 padding: 20px;
             }
 
+            .ascii-name {
+                font-size: 6px; 
+            }
+
             .arsenal-item,
             .project-item {
                 flex-direction: column;
@@ -332,6 +339,10 @@
             .contact-links {
                 flex-direction: column;
                 align-items: center;
+            }
+
+            .contact-link {
+                width: 100%;
             }
 
         }
